style: add number type input and change font

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: myFont;
+  src: url(../public/HelveticaNeue.ttc);
+}
 * {
   margin: 0px;
   padding: 0;
@@ -8,5 +12,6 @@ html,
 body {
   min-height: 100vh;
 }
+
 
 
